NM-3750 * Removing hardcoded strings in views * fix availabilities for new instances (wrong availability rules) * removing booking_type tile when only one available * select location automatically if only one available for new listing * adding polish translations for dates and standard errors

--- a/app/new_ui_views/dashboard/company/host_reservations/_reservation.html.haml
+++ b/app/new_ui_views/dashboard/company/host_reservations/_reservation.html.haml
@@ -27,7 +27,7 @@
     .col-xs-5
       .order-status
         %span{class: reservation.state }
-          = reservation.state.humanize.capitalize
+          = t "dashboard.host_reservations.#{reservation.state}"
 
 
 
