--- a/app/new_ui_views/registrations/attributes/_password.html.haml
+++ b/app/new_ui_views/registrations/attributes/_password.html.haml
@@ -1,2 +1,2 @@
 - if only_inputs.empty? || only_inputs.include?(:password)
-  = f.input :password, :label => (f.object.persisted? ? "Change password" : "Password" )
+  = f.input :password, :label => (f.object.persisted? ? t('general.change_password') : t('general.password') )
