--- a/app/new_ui_views/dashboard/company/transactables/form_fields/_location.html.haml
+++ b/app/new_ui_views/dashboard/company/transactables/form_fields/_location.html.haml
@@ -1,10 +1,10 @@
 - is_required = !f.object.transactable_type.skip_location?
 
-= f.association :location, collection: @locations, required: is_required, input_html: { :"data-location-field" => true }
+= f.association :location, collection: @locations, required: is_required, input_html: { :"data-location-field" => true }, include_blank: false
 
 
 %p.form-control-option{ :"data-location-actions" => true }
-  = link_to 'Add New Location', new_dashboard_company_location_path, data: { modal: true }
+  = link_to t('locations.add_new_location'), new_dashboard_company_location_path, data: { modal: true }
 
   = render @locations, f: f
 
