--- a/app/views/registrations/_attributes.html.haml
+++ b/app/views/registrations/_attributes.html.haml
@@ -25,7 +25,7 @@
 
 = f.input :company_name, label: "Company name", as: :string if only_inputs.empty? || only_inputs.include?(:company_name)
 = f.association :industries, :blank => false, :input_html => { :class => 'custom-select' } if only_inputs.empty? || only_inputs.include?(:industries)
-= f.input :password, :label => (f.object.persisted? ? "Change password" : "Password" ) if only_inputs.empty? || only_inputs.include?(:password)
+= f.input :password, :label => (f.object.persisted? ? t('general.change_password') : t('general.password') ) if only_inputs.empty? || only_inputs.include?(:password)
 - if only_inputs.empty? || only_inputs.include?(:avatar)
   .single-photo
     = file_upload_input_with_label('Profile Photo',
