--- a/app/views/registrations/_phone_fields.html.haml
+++ b/app/views/registrations/_phone_fields.html.haml
@@ -6,4 +6,4 @@
     .controls
       = label_tag do
         = check_box_tag "#{f.object.class.name.underscore}_mobile_same_as_phone", '1', (f.object.phone == f.object.mobile_number), data: { 'same-as-phone-checkbox' => true }
-        = "Same as phone"
+        =  t 'general.same_as_phone'
