--- a/app/views/instance_admin/shipping_options/dimensions_templates/_list_table.html.haml
+++ b/app/views/instance_admin/shipping_options/dimensions_templates/_list_table.html.haml
@@ -4,7 +4,7 @@
       %thead
         %tr
           %th= t('instance_admin.shipping_options.dimensions_templates.name')
-          %th= t('instance_admin.shipping_options.dimensions_templates.details')
+          %th= t('instance_admin.shipping_options.dimensions_templates.default')
           %th
             %span.header-link
               = link_to t('instance_admin.shipping_options.dimensions_templates.add_new_dimensions_template'), new_instance_admin_shipping_options_dimensions_template_path
@@ -14,6 +14,7 @@
           %td
             = resource.name
           %td
+            = resource.use_as_default
           %td
             = link_to t('instance_admin.edit'), edit_instance_admin_shipping_options_dimensions_template_path(resource), :class => 'btn btn-blue'
             = link_to t('instance_admin.delete'), instance_admin_shipping_options_dimensions_template_path(resource),
