--- a/app/views/locations/_booking_module.html.haml
+++ b/app/views/locations/_booking_module.html.haml
@@ -88,7 +88,7 @@
                     %span.period= t('reservations.per_month')
 
       .clearfix
-      = render 'locations/booking_module_listing_description'
+      = render 'locations/booking_module_listing_description', listing: listing
 
       - if listing.actions_allowed?
         - unless listing.schedule_booking?
@@ -160,7 +160,7 @@
               = render 'locations/booking_module_listing_description_above_call_to_action', listing: listing
               = render 'locations/booking_module_call_to_actions', listing: listing, book_hash: book_hash.stringify_keys, rfq_class: rfq_class, rfq_label: rfq_label
               .clearfix
-              = render 'locations/booking_module_listing_description_below_call_to_action'
+              = render 'locations/booking_module_listing_description_below_call_to_action', listing: listing
 
         - else
           = render 'locations/booking_module_not_bookable', listing: listing
