NM-3692 More info in email after bulk upload

--- a/app/views/data_upload_mailer/notify_uploader_of_failed_import.html.liquid
+++ b/app/views/data_upload_mailer/notify_uploader_of_failed_import.html.liquid
@@ -10,4 +10,10 @@
   </p>
 {% endif %}
 
+{% if data_upload.sanitized_encountered_error != blank %}
+  <p>
+    Encountered errors log:
+    {{ data_upload.sanitized_encountered_error | raw_escape_string }}
+  </p>
+{% endif %}
 
