--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -43,6 +43,8 @@
     = stylesheet_link_tag 'application'
     = render "dynamic_theme/application"
 
+    = render 'layouts/homepage_css' if home_page?
+
     = javascript_include_tag 'vendor/modernizr'
     = render "shared/javascript_assets"
 
