--- a/app/frontend/stylesheets/new_ui/new_ui.scss
+++ b/app/frontend/stylesheets/new_ui/new_ui.scss
@@ -1,4 +1,7 @@
 @import "common/common";
+// Bootstrap has no place in here, but unfortunatelly there are quite a few @extend rules in our code based on bootstrap elements
+// It relates mostly to buttons and panels, and should be resolved as it extends compilation by over 2 seconds
+@import "common/config/bootstrap-custom";
 
 @import "general/general";
 @import "layout/layout";
