--- a/app/new_ui_views/dashboard/company/host_reservations/_reservation.html.haml
+++ b/app/new_ui_views/dashboard/company/host_reservations/_reservation.html.haml
@@ -27,7 +27,7 @@
     .col-xs-5
       .order-status
         %span{class: reservation.state }
-          = t "dashboard.host_reservations.#{reservation.state}"
+          = t "reservations.states.#{reservation.state}"
 
 
 
