--- a/app/views/shared/payment_methods/_credit_card.html.haml
+++ b/app/views/shared/payment_methods/_credit_card.html.haml
@@ -80,6 +80,7 @@
           .span5.whats-this.answer
             %p#whats-this-target.collapse= t 'payments.cc_fields.ccv_hint'
 
+= render 'listings/reservations/confirm_reservations', f: f
 
 - content_for :script do
   = javascript_include_tag "https://js.stripe.com/v1/"
