NM-3789 File upload once again works in instance admin

--- a/app/frontend/stylesheets/instance_admin.scss
+++ b/app/frontend/stylesheets/instance_admin.scss
@@ -1,6 +1,9 @@
 @import "common/common";
 @import "common/fonts";
 
+@import "vendor/bootstrap";
+@import "vendor/bootstrap-theme";
+
 @import "instance_admin/fonts";
 @import "instance_admin/variables";
 
