NM-3783 Updated dynamic theme colors

--- a/app/new_ui_views/dynamic_theme/_new_ui.html.erb
+++ b/app/new_ui_views/dynamic_theme/_new_ui.html.erb
@@ -422,11 +422,11 @@ button.close { background: transparent; border: 0; }
 .alert .close { background: none; border: none; color: inherit; }
 .alert.error { background: <%= theme_red %>; color: #fff; }
 .alert.error .close { color: #fff; }
-.alert.notice { background: <%= theme_red %>; color: #fff; }
+.alert.notice { background: <%= theme_green %>; color: #fff; }
 .alert.notice .close { color: #fff; }
 .alert.warning { background: <%= theme_orange %>; color: #fff; }
 .alert.warning .close { color: #fff; }
-.alert.success { background: <%= theme_red %>; color: #fff; }
+.alert.success { background: <%= theme_green %>; color: #fff; }
 .alert.success .close { color: #fff; }
 .alert.deleted { background: <%= theme_red %>; color: #fff; }
 .alert.deleted .close { color: #fff; }
