NM-3775 Added missing charts

--- a/app/new_ui_views/layouts/dashboard.html.haml
+++ b/app/new_ui_views/layouts/dashboard.html.haml
@@ -84,7 +84,8 @@
 
     = javascript_tag do
       = javascript_i18n_include_tag
+      $(function(){
       = yield :domready
-
+      });
 
     = yield(:body_bottom)
