Syntax fix for :domready yield

--- a/app/views/layouts/instance_admin.html.haml
+++ b/app/views/layouts/instance_admin.html.haml
@@ -47,4 +47,6 @@
     = yield :script
     = javascript_tag do
       = javascript_i18n_include_tag
+      $(function(){
       = yield :domready
+      });
