--- a/app/new_ui_views/dashboard/user_messages/_form.html.haml
+++ b/app/new_ui_views/dashboard/user_messages/_form.html.haml
@@ -8,4 +8,4 @@
     = f.input :body
 
   .dialog__actions
-    = f.submit t('user_messages.send_message')
+    = f.submit t('user_messages.send_message'), class: 'btn btn-green'
