NM-3739 separate subscription booking asa a new tab, adds default avaiability template for TT.

--- a/app/frontend/stylesheets/new_ui/forms/_pricing.scss
+++ b/app/frontend/stylesheets/new_ui/forms/_pricing.scss
@@ -28,6 +28,10 @@
             content: $fa-var-money;
         }
 
+        .pricing-model--subscription:before {
+            content: $fa-var-refresh;
+        }
+
         h5 {
             margin-bottom: 0;
             font-size: 14px;
