--- a/app/new_ui_views/dashboard/shared/_booking_types_tabs.html.haml
+++ b/app/new_ui_views/dashboard/shared/_booking_types_tabs.html.haml
@@ -1,23 +1,23 @@
-- if (f.object.transactable_type.booking_choices - %w(overnight regular subscription)).any?
+- if (f.object.transactable_type.booking_choices - %w(overnight)).many?
   %h4.control-label= t('pricing.how_is_the_service_priced')
   %ul.pricing-model.box-options{'data-booking-type-list' => true}
     - f.object.transactable_type.booking_choices.each do |booking_type|
       - booking_class = "pricing-model--#{booking_type} #{booking_types_active_toggle(f.object, booking_type)}"
-      - booking_type_scope = booking_type == 'overnight' || booking_type == 'subscription' ? :regular : booking_type
-      - unless f.object.transactable_type.booking_choices.include?('regular') && booking_type == 'overnight' || booking_type == 'subscription'
+      - booking_type_scope = booking_type == 'overnight' ? :regular : booking_type
+      - unless f.object.transactable_type.booking_choices.include?('regular') && booking_type == 'overnight'
         %li{class: booking_class}
           = link_to "#booking-type-#{booking_type_scope}", class: booking_class, 'data-booking-type' => booking_type, 'data-toggle' => 'tab' do
             %h5
               = t :label, scope: [:pricing, :mode, booking_type_scope]
             %p
               = t :description, scope: [:pricing, :mode, booking_type_scope]
-  %hr/
 
 .tab-content.control-group
-  %div{id: 'booking-type-regular', class: "tab-pane #{booking_types_active_toggle(f.object, ['regular', 'overnight', 'subscription'], true)}"}
+  %div{id: 'booking-type-regular', class: "tab-pane #{booking_types_active_toggle(f.object, ['regular', 'overnight'], true)}"}
     = yield :booking_type_regular_tab_content
   %div{id: 'booking-type-schedule', class: "tab-pane #{booking_types_active_toggle(f.object, 'schedule', true)}"}
     = yield :booking_type_schedule_tab_content
-/
   %div{id: 'booking-type-subscription', class: "tab-pane #{booking_types_active_toggle(f.object, 'subscription', true)}"}
     = yield :booking_type_subscription_tab_content
+
+= yield :availability_templates_content
