--- a/app/views/instance_admin/manage/service_types/_form.html.haml
+++ b/app/views/instance_admin/manage/service_types/_form.html.haml
@@ -71,6 +71,9 @@
     .row
       .input-container.col-xs-12
         = f.input :timezone_rule, collection: {'Location' => 'location', "Buyer Time Zone" => 'buyer', 'Seller Time Zone' => 'seller', 'Dafault Time Zone' => 'instance'}, required: false, input_html: { class: 'form-control' }, include_blank: false
+    .row
+      .input-container.col-xs-12
+        = f.input :default_availability_template_id, collection: current_instance.availability_templates.all, required: false, input_html: { class: 'form-control' }, include_blank: true
 
   .content-container
     %h4= t('instance_admin.manage.service_types.pricing')
