NM-3737 Removed unnecessary caret on cart page

--- a/app/frontend/stylesheets/components/_custom_checkboxes_and_radios.scss
+++ b/app/frontend/stylesheets/components/_custom_checkboxes_and_radios.scss
@@ -179,7 +179,14 @@
       }
     }
   }
+}
 
+.customSelect {
+    position: relative;
+}
+
+.cart-item-list .customSelect i {
+    display: none;
 }
 
 .custom-select-dropdown-icon {
