NM-3035, NM-3776, NM-3699, NM-3325 fixes in refunds and validate final price

--- a/app/new_ui_views/dashboard/company/payments/show.html.haml
+++ b/app/new_ui_views/dashboard/company/payments/show.html.haml
@@ -22,9 +22,15 @@
           %th= t('dashboard.payments.state')
           %td= t("dashboard.payments.states.#{@payment.state}")
 
+        - @payment.alerts.each do |alert|
+          %tr
+            %th= t 'dashboard.payments.alerts'
+            %td= alert
+
+
     - if @payment.authorized?
       %p= link_to t("dashboard.payments.capture"), capture_dashboard_company_orders_received_payment_path(@order, @payment), class: 'btn btn-warning', method: :post
 
-    - if @payment.paid?
+    - if @payment.paid? && @payment.refund_attempts.zero?
       %p= link_to t("dashboard.payments.refund"), refund_dashboard_company_orders_received_payment_path(@order, @payment), class: 'btn btn-warning', method: :post
 
