--- a/app/new_ui_views/listings/recurring_bookings/review.html.haml
+++ b/app/new_ui_views/listings/recurring_bookings/review.html.haml
@@ -41,6 +41,7 @@
           .summary-line
             .summary-line-label= t 'recurring_reservations_review.total_per_interval', interval: t("recurring_reservations_review.#{@recurring_booking.interval}")
             .summary-line-value.total-amount= @recurring_booking.total_price
+            = f.hidden_field :total_amount_check, value: @recurring_booking.total_amount.cents
             .clearfix
 
         - if @recurring_booking_request.display_phone_and_country_block?
