--- a/app/new_ui_views/listings/reservations/review.html.haml
+++ b/app/new_ui_views/listings/reservations/review.html.haml
@@ -88,6 +88,7 @@
             .summary-line-label= t 'reservations_review.total'
             .summary-line-value.total-amount{data: {currency_symbol: @reservation.total_amount.currency.symbol, total_amount: @reservation.total_amount.to_f}}= @reservation.total_price
             .clearfix
+            = f.hidden_field :total_amount_check, value: @reservation.total_amount.cents
 
         - if should_display_checkout_extra_fields?(f.object.checkout_extra_fields.user, true)
           %br
