NM-3702 Time picker with dropdown instead of popup

--- a/app/frontend/stylesheets/new_ui/new_ui_vendor.scss
+++ b/app/frontend/stylesheets/new_ui/new_ui_vendor.scss
@@ -7,6 +7,7 @@
 @import 'cropper/dist/cropper.min';
 @import "eonasdan-bootstrap-datetimepicker/src/sass/bootstrap-datetimepicker-build";
 @import 'spectrum/spectrum';
+@import 'jt.timepicker/jquery.timepicker';
 
 // Vendor overrides
 @import "vendor/vendor";
