--- a/app/frontend/stylesheets/instance_admin_vendor.scss
+++ b/app/frontend/stylesheets/instance_admin_vendor.scss
@@ -31,4 +31,4 @@ $fa-font-path: '/assets/font-awesome/';
 @import "select2/select2";
 
 @import "spectrum/spectrum";
-
+@import 'jt.timepicker/jquery.timepicker';
