NM-3757 fix for doulbe display of HEAD content holder, NM-3758 added validation, fixed IV in admin

--- a/app/new_ui_views/layouts/dashboard.html.haml
+++ b/app/new_ui_views/layouts/dashboard.html.haml
@@ -49,6 +49,7 @@
     / Head Javascript
     = javascript_include_tag 'vendor/modernizr'
     = render 'shared/ckeditor_basepath'
+    = yield(:head_bottom)
 
   %body{class: (navigation_visible? ? 'navigation-visible' : nil ) }
 
