--- a/app/views/admin/instance_views/_form.html.haml
+++ b/app/views/admin/instance_views/_form.html.haml
@@ -1,8 +1,8 @@
 = simple_form_for [:admin, @instance, @instance_view] do |f|
   = f.input :path
-  = f.association :transactable_type
+  = f.association :transactable_types
   = f.input :body, input_html: { class: 'input-block-level', rows: '35' }
-  = f.input :locale
+  = f.association :locales
   = f.input :format
   = f.input :handler
   = f.input :partial
