--- a/app/views/instance_admin/theme/content_holders/_form.html.haml
+++ b/app/views/instance_admin/theme/content_holders/_form.html.haml
@@ -6,7 +6,7 @@
     .input-container.col-xs-6
       = f.input :inject_pages, collection: inject_pages_collection, input_html: {  multiple: true, class: 'form-control chosen'}
     .input-container.col-xs-6
-      = f.input :position, collection: [['Head', 'meta'], ['Body top', 'body_top'], ['Body bottom', 'body_bottom']], input_html: { class: 'form-control' }
+      = f.input :position, collection: ContentHolder::POSITIONS, input_html: { class: 'form-control' }
   .row
     .input-container.col-xs-12
       = f.input :enabled, inline_label: true
