--- a/app/new_ui_views/layouts/_scripts.html.haml
+++ b/app/new_ui_views/layouts/_scripts.html.haml
@@ -3,8 +3,8 @@
 
 = yield :script
 
-= javascript_tag do
-  = javascript_i18n_include_tag
-  $(function(){
-  = yield :domready
-  });
+- if content_for?(:domready)
+  = javascript_tag do
+    $(function(){
+    = yield :domready
+    });
