--- a/app/views/layouts/instance_admin.html.haml
+++ b/app/views/layouts/instance_admin.html.haml
@@ -40,13 +40,16 @@
       = render 'instance_admin/shared/render_flash'
       = yield
 
+    = javascript_tag do
+      = javascript_i18n_include_tag
+
     = webpack_manifest_script
     = webpack_bundle_tag 'common'
     = webpack_bundle_tag 'instanceadmin'
 
     = yield :script
-    = javascript_tag do
-      = javascript_i18n_include_tag
-      $(function(){
-      = yield :domready
-      });
+    - if content_for?(:domready)
+      = javascript_tag do
+        $(function(){
+        = yield :domready
+        });
